; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfad_bsg.c_bfad_iocmd_fcpim_get_del_itn_stats.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfad_bsg.c_bfad_iocmd_fcpim_get_del_itn_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfad_s = type { i32, i32 }
%struct.bfa_bsg_fcpim_del_itn_stats_s = type { i32, i32 }
%struct.bfa_fcpim_s = type { i32 }

@BFA_STATUS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bfad_iocmd_fcpim_get_del_itn_stats(%struct.bfad_s* %0, i8* %1) #0 {
  %3 = alloca %struct.bfad_s*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.bfa_bsg_fcpim_del_itn_stats_s*, align 8
  %6 = alloca %struct.bfa_fcpim_s*, align 8
  %7 = alloca i64, align 8
  store %struct.bfad_s* %0, %struct.bfad_s** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.bfa_bsg_fcpim_del_itn_stats_s*
  store %struct.bfa_bsg_fcpim_del_itn_stats_s* %9, %struct.bfa_bsg_fcpim_del_itn_stats_s** %5, align 8
  %10 = load %struct.bfad_s*, %struct.bfad_s** %3, align 8
  %11 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %10, i32 0, i32 1
  %12 = call %struct.bfa_fcpim_s* @BFA_FCPIM(i32* %11)
  store %struct.bfa_fcpim_s* %12, %struct.bfa_fcpim_s** %6, align 8
  %13 = load %struct.bfad_s*, %struct.bfad_s** %3, align 8
  %14 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %13, i32 0, i32 0
  %15 = load i64, i64* %7, align 8
  %16 = call i32 @spin_lock_irqsave(i32* %14, i64 %15)
  %17 = load %struct.bfa_bsg_fcpim_del_itn_stats_s*, %struct.bfa_bsg_fcpim_del_itn_stats_s** %5, align 8
  %18 = getelementptr inbounds %struct.bfa_bsg_fcpim_del_itn_stats_s, %struct.bfa_bsg_fcpim_del_itn_stats_s* %17, i32 0, i32 1
  %19 = bitcast i32* %18 to i8*
  %20 = load %struct.bfa_fcpim_s*, %struct.bfa_fcpim_s** %6, align 8
  %21 = getelementptr inbounds %struct.bfa_fcpim_s, %struct.bfa_fcpim_s* %20, i32 0, i32 0
  %22 = bitcast i32* %21 to i8*
  %23 = call i32 @memcpy(i8* %19, i8* %22, i32 4)
  %24 = load %struct.bfad_s*, %struct.bfad_s** %3, align 8
  %25 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %24, i32 0, i32 0
  %26 = load i64, i64* %7, align 8
  %27 = call i32 @spin_unlock_irqrestore(i32* %25, i64 %26)
  %28 = load i32, i32* @BFA_STATUS_OK, align 4
  %29 = load %struct.bfa_bsg_fcpim_del_itn_stats_s*, %struct.bfa_bsg_fcpim_del_itn_stats_s** %5, align 8
  %30 = getelementptr inbounds %struct.bfa_bsg_fcpim_del_itn_stats_s, %struct.bfa_bsg_fcpim_del_itn_stats_s* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  ret i32 0
}

declare dso_local %struct.bfa_fcpim_s* @BFA_FCPIM(i32*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
